--- a/src/main/resources/templates/allProduct.html
+++ b/src/main/resources/templates/allProduct.html
@@ -19,18 +19,18 @@
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
         <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
-        <li class="nav-item"><a class="nav-link" href="/guest">LOGOUT</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
       </ul>
-      <div class="search-container">
-        <label>
-          <input type="text" class="search-input" placeholder="Search...">
-        </label>
-        <button class="search-button">Search</button>
-      </div>
       
+      <form th:action="@{/search}" method="get" class="d-flex">
+        <label>
+          <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+        </label>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
       <form class="d-flex">
         <a class="btn btn-outline-dark" type="submit" href="/cart/view">
-          <i class="bi-cart-fill me-1" ></i>
+          <i class="bi-cart-fill me-1"></i>
           Cart
         </a>
       </form>
@@ -42,52 +42,30 @@
   <div class="container px-4 px-lg-5 mt-5">
     <div class="row gx-4 gx-lg-5">
       <th:block th:each="prod, iterStat : ${products}">
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
-          <div class="card h-100">
-            <div class="card-body p-4">
-              <div class="text-center">
-                <img th:src="${prod.imageURL}" width="200" height="200" alt="">
-                <a th:href="@{/products/{id}(id=${prod.id})}" class="text-decoration-none"><h5 th:text="${prod.productName}"></h5></a>
-                <p th:text="${'Price: $' + prod.price}"></p>
+        <th:block th:if="${iterStat.index >= currentPage * 12 and iterStat.index < (currentPage + 1) * 12}">
+          <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
+            <div class="card h-100">
+              <div class="card-body p-4">
+                <div class="text-center">
+                  <img th:src="${prod.imageURL}" width="200" height="200" alt="">
+                  <a th:href="@{/products/{id}(id=${prod.id})}" class="text-decoration-none">
+                    <h5 th:text="${prod.productName}"></h5>
+                  </a>
+                  <p th:text="${'Price: $' + prod.price}"></p>
+                </div>
               </div>
-            </div>
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${prod.id})}">Add to cart</a>
+              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center">
+                  <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${prod.id})}">Add to cart</a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <th:block th:if="${iterStat.index % 5 == 4}"></div></div></th:block>
-  </th:block>
-  </div>
+        </th:block>
+      </th:block>
+    </div>
   </div>
 </section>
-
-
-<!--<section class="py-5">-->
-<!--  <tr th:each="prod : ${products}">-->
-<!--    <div class="container px-4 px-lg-5 mt-5">-->
-<!--      <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">-->
-<!--          <div class="col mb-5">-->
-<!--            <div class="card h-100">-->
-<!--              &lt;!&ndash; Product details&ndash;&gt;-->
-<!--              <div class="card-body p-4">-->
-<!--                <div class="text-center">-->
-<!--                    <td><img th:src="${prod.imageURL}" width="200" height="200" alt=""></td>-->
-<!--                  <a th:href="@{/products/{id}(id=${prod.id})}"><td th:text="${prod.productName}"></td></a>-->
-<!--                  <br>-->
-<!--                    <td th:text="${'Price: $' + prod.price}"></td>-->
-<!--                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent"> </div>-->
-<!--                      <div class="text-center"><a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${prod.id})}">Add to cart</a></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--      </div>-->
-<!--    </tr>-->
-<!--  </section>-->
 <div th:if="${totalPages > 1}">
   <ul>
     <li th:if="${currentPage != 0}">
@@ -101,13 +79,9 @@
     </li>
   </ul>
 </div>
-<!-- Footer-->
 <footer class="py-5 bg-dark">
   <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
-<!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<!--<script src="../static/js/scripts.js"></script>-->
 </body>
 </html>
