--- a/src/main/resources/templates/cartGuest.html
+++ b/src/main/resources/templates/cartGuest.html
@@ -28,7 +28,7 @@
       </thead>
       <tbody>
       <tr th:each="item: ${CART_ITEM}">
-        <form action="/update/guest" method="post">
+        <form action="/guest/update" method="post">
           <input type="hidden" name="id" th:value="${item.productId}" />
           <td th:text="${item.productId}"></td>
           <td th:text="${item.name}"></td>
@@ -37,7 +37,7 @@
                      onblur="this.form.submit()" style="width: 50px;"></td>
           <td th:text="${item.price*item.qty}"></td>
           <td><a class="btn btn-primary btn-sm"
-                 th:href="@{/remove/guest/{id}(id=${item.productId})}">Remove</a></td>
+                 th:href="@{/guest/remove/{id}(id=${item.productId})}">Remove</a></td>
         </form>
       </tr>
       
@@ -45,7 +45,7 @@
     </table>
     <p th:text="${'Total: $' + TOTAL}">Total: </p>
     <hr />
-    <a class="btn btn-primary btn-sm" href="/clear/guest">Clear All</a>
+    <a class="btn btn-primary btn-sm" href="/guest/clear">Clear All</a>
     <a class="btn btn-primary btn-sm" href="/login">Check Out</a>
   </div>
 </div>
