--- a/src/main/resources/templates/managementOrder.html
+++ b/src/main/resources/templates/managementOrder.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Manage Order</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>Manage Orders</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/managementUser">Users</a>
+          <a class="nav-link" href="/ManagementUser">Users</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/ManagementProd">Products</a>
@@ -29,9 +29,7 @@
 </nav>
 <div class="container">
   <h1 class="text-center my-4">Manage Orders</h1>
-  <!-- Placeholder for order management options -->
-  
-  <table class="table" style="border: black">
+  <table class="table table-bordered">
     <thead>
     <tr>
       <th>ID</th>
@@ -40,28 +38,25 @@
       <th>Status</th>
       <th>Date</th>
       <th>Address</th>
-<!--      <th>Details</th>-->
       <th>Action</th>
     </tr>
     </thead>
     <tbody>
-    <!-- Loop through orders -->
     <tr th:each="order : ${orders}">
       <td th:text="${order.id}"></td>
       <td th:text="${order.fullName}"></td>
-      <td th:text="@{${order.totalPrice} + '$'}"></td>
+      <td th:text="${order.totalPrice} + ' $'"></td>
       <td th:text="${order.orderStatus}"></td>
       <td th:text="${order.orderDate}"></td>
       <td th:text="${order.deliveryAddress}"></td>
       <td style="white-space: nowrap">
-        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementOrder/edit/' + ${order.id}}">Edit</a>
-        <a class="btn btn-primary btn-sm" th:href="@{/ManagementOrder/delete/{id}(id=${order.id})}">Delete</a>
+        <a class="btn btn-primary btn-sm" th:href="@{/ManagementOrder/edit/{id}(id=${order.id})}">Edit</a>
+        <a class="btn btn-danger btn-sm" th:href="@{/ManagementOrder/delete/{id}(id=${order.id})}">Delete</a>
       </td>
     </tr>
     </tbody>
   </table>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
