--- a/src/main/resources/templates/productDetail.html
+++ b/src/main/resources/templates/productDetail.html
@@ -19,15 +19,16 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
+            <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
+            <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
           </ul>
           
-          <div class="search-container">
+          <form th:action="@{/search}" method="get" class="d-flex">
             <label>
-              <input type="text" class="search-input" placeholder="Search...">
+              <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
             </label>
-            <button class="search-button">Search</button>
-          </div>
-          
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
           <form class="d-flex">
             <a class="btn btn-outline-dark" type="submit" href="/cart/view">
               <i class="bi-cart-fill me-1"></i>
@@ -58,22 +59,20 @@
               
               <td th:text="${prod.description}"></td>
               <hr />
-              <div class="row mb-4">
-                <div class="col-md-4 col-6 mb-3">
-                  <label class="mb-2 d-block">Quantity</label>
-                  <div class="input-group mb-3" style="width: 170px;">
-                    <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon1" data-mdb-ripple-color="dark">
-                      <i class="fas fa-minus"></i>
-                    </button>
-                    <input type="text" class="form-control text-center border border-secondary" placeholder="14" aria-label="Example text with button addon" aria-describedby="button-addon1" />
-                    <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon2" data-mdb-ripple-color="dark">
-                      <i class="fas fa-plus"></i>
-                    </button>
-                  </div>
-                </div>
-              </div>
+<!--              <div class="row mb-4">-->
+<!--                <div class="col-md-4 col-6 mb-3">-->
+<!--                  <label class="mb-2 d-block">Quantity</label>-->
+<!--                  <div class="input-group mb-3" style="width: 170px;">-->
+<!--                    <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon1" data-mdb-ripple-color="dark">-->
+<!--                      <i class="fas fa-minus"></i>-->
+<!--                    </button>-->
+<!--                    <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon2" data-mdb-ripple-color="dark">-->
+<!--                      <i class="fas fa-plus"></i>-->
+<!--                    </button>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </div>-->
               <a th:href="@{/cart/add/{id}(id=${prod.id})}" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
-              <a href="#" class="btn btn-light border border-secondary py-2 icon-hover px-3"> <i class="me-1 fa fa-heart fa-lg"></i> Save </a>
             </div>
           </main>
         </div>
