--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>All Product</title>
+  <title>Search Products</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link type = "text/css" href="/css/home.css" rel="stylesheet">
+  <link href="/css/home.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container px-4 px-lg-5">
-    <h1 class="navbar-brand" href="#!">Hi-Tech</h1>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/guest">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/guest/products">All Products</a></li>
-        <li class="nav-item"><a class="nav-link" href="/login">LOGIN</a></li>
-      </ul>
-      
-      <form th:action="@{/search}" method="get" class="d-flex">
-        <label>
-          <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
-        </label>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-      <form class="d-flex">
-        <a class="btn btn-outline-dark" type="submit" href="/guest/view">
-          <i class="bi-cart-fill me-1"></i>
-          Cart
-        </a>
-      </form>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+      <h1 class="navbar-brand" href="#!">Hi-Tech</h1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
+          <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
+        </ul>
+        
+        <form th:action="@{/search}" method="get" class="d-flex">
+          <label>
+            <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+          </label>
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+        <form class="d-flex">
+          <a class="btn btn-outline-dark" type="submit" href="/cart/view">
+            <i class="bi-cart-fill me-1"></i>
+            Cart
+          </a>
+        </form>
+      </div>
     </div>
-  </div>
+  </nav>
 </nav>
-
-
+</br>
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
     <div class="row gx-4 gx-lg-5">
@@ -53,12 +55,12 @@
             </div>
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
               <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" th:href="@{/guest/add/{id}(id=${prod.id})}">Add to cart</a>
+                <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${prod.id})}">Add to cart</a>
               </div>
             </div>
           </div>
         </div>
-        <th:block th:if="${iterStat.index % 5 == 4}"></th:block>
+        <th:block th:if="${iterStat.index % 5 == 4}"></div></div></th:block>
   </th:block>
   </div>
   </div>
@@ -83,7 +85,5 @@
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="../static/js/scripts.js"></script>
 </body>
 </html>
