--- a/src/main/resources/templates/searchManagProd.html
+++ b/src/main/resources/templates/searchManagProd.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Manage Users</title>
+  <title>Manage Product</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -28,34 +28,44 @@
   </div>
 </nav>
 <div class="container">
-  <h1 class="text-center my-4">User Management</h1>
+  <h1 class="text-center my-4">WELLCOME!</h1>
+  <a class="btn btn-primary" href="/ManagementProd/create">Create Product</a>
+  
   <table class="table" style="border: black">
     <thead>
     <tr>
       <th>ID</th>
-      <th>Full Name</th>
-      <th>Date of Birth</th>
-      <th>Address</th>
-      <th>Phone Number</th>
-      <th>Email</th>
-      <th>Username</th>
-      <th>Password</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Image</th>
+      <th>Price</th>
+      <th>Details</th>
       <th>Action</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="user : ${users}">
-      <td th:text="${user.id}"></td>
-      <td th:text="${user.fullName}"></td>
-      <td th:text="${user.dateOfBirth}"></td>
-      <td th:text="${user.address}"></td>
-      <td th:text="${user.phoneNumber}"></td>
-      <td th:text="${user.email}"></td>
-      <td th:text="${user.username}"></td>
-      <td th:text="${user.password}"></td>
+    <tr th:each="prod : ${product}">
+      <td th:text="${prod.id}"></td>
+      <td th:text="${prod.productName}"></td>
+      
+      <td>
+        <div class="overflow-auto" style="max-height: 150px;">
+          <span th:text="${prod.description}"></span>
+        </div>
+      </td>
+      
+      <td><img th:src="${prod.imageURL}" width="150" height="150" alt=""></td>
+      
+      <td th:text="@{${prod.price} + '$'}"></td>
+      
+      <td>
+        <div class="overflow-auto" style="max-height: 150px;">
+          <span th:text="${prod.details}"></span>
+        </div>
+      </td>
       <td style="white-space: nowrap">
-        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementUser/edit/' + ${user.id}}">Edit</a>
-        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementUser/delete/' + ${user.id}}">Delete</a>
+        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementProd/edit/' + ${prod.id}}">Edit</a>
+        <a class="btn btn-primary btn-sm" th:href="@{/ManagementProd/delete/{id}(id=${prod.id})}">Delete</a>
       </td>
     </tr>
     </tbody>
