--- a/src/main/resources/templates/viewOrder.html
+++ b/src/main/resources/templates/viewOrder.html
@@ -20,18 +20,18 @@
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
         <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
-        <li class="nav-item"><a class="nav-link" href="/guest">LOGOUT</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
       </ul>
-      <div class="search-container">
-        <label>
-          <input type="text" class="search-input" placeholder="Search...">
-        </label>
-        <button class="search-button">Search</button>
-      </div>
       
+      <form th:action="@{/search}" method="get" class="d-flex">
+        <label>
+          <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+        </label>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
       <form class="d-flex">
         <a class="btn btn-outline-dark" type="submit" href="/cart/view">
-          <i class="bi-cart-fill me-1" ></i>
+          <i class="bi-cart-fill me-1"></i>
           Cart
         </a>
       </form>
@@ -41,7 +41,6 @@
 
 <div class="container">
   <h1 class="text-center my-4">Manage Orders</h1>
-  <!-- Placeholder for order management options -->
   
   <table class="table" style="border: black">
     <thead>
