--- a/src/main/resources/templates/editCustomer.html
+++ b/src/main/resources/templates/editCustomer.html
@@ -16,42 +16,42 @@
     
     <div class="mb-3">
       <label for="fullName" class="form-label">Full Name</label>
-      <input type="text" class="form-control" id="fullName" name="fullName" required>
+      <input type="text" class="form-control" th:field="${users.fullName}" id="fullName" name="fullName" required>
     </div>
     
     <div class="mb-3">
       <label for="dateOfBirth" class="form-label">Date of Birth</label>
-      <input type="date" class="form-control" id="dateOfBirth" name="dateOfBirth" required>
+      <input type="date" class="form-control" th:field="${users.dateOfBirth}" id="dateOfBirth" name="dateOfBirth" required>
     </div>
     
     <div class="mb-3">
       <label for="address" class="form-label">Address</label>
-      <input type="text" class="form-control" id="address" name="address" required>
+      <input type="text" class="form-control" th:field="${users.address}" id="address" name="address" required>
     </div>
     
     <div class="mb-3">
       <label for="phoneNumber" class="form-label">Phone Number</label>
-      <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" required>
+      <input type="text" class="form-control" th:field="${users.phoneNumber}" id="phoneNumber" name="phoneNumber" required>
     </div>
     
     <div class="mb-3">
       <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" name="email" required>
+      <input type="email" class="form-control" th:field="${users.email}" id="email" name="email" required>
     </div>
     
     <div class="mb-3">
       <label for="username" class="form-label">Username</label>
-      <input type="text" class="form-control" id="username" name="username" required>
+      <input type="text" class="form-control" th:field="${users.username}" id="username" name="username" required>
     </div>
     
     <div class="mb-3">
       <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" id="password" name="password" required>
+      <input type="password" class="form-control" th:field="${users.password}" id="password" name="password" required>
     </div>
     
     <div class="mb-3">
       <label for="role" class="form-label">Role</label>
-      <select class="form-select" id="role" name="role" required>
+      <select class="form-select" th:field="${users.role}" id="role" name="role" required>
         <option value="ROLE_ADMIN">Admin</option>
         <option value="ROLE_USER">User</option>
       </select>
