--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,84 +1,108 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Shop Homepage</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-        <link type = "text/css" href="/css/home.css" rel="stylesheet">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <h1 class="navbar-brand" href="#!">Hi-Tech</h1>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
-                    </ul>
-                  
-                  <form th:action="@{/search}" method="get" class="d-flex">
-                    <label>
-                      <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
-                    </label>
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
-                    <form class="d-flex">
-                        <a class="btn btn-outline-dark" type="submit" href="/cart/view">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                        </a>
-                    </form>
-                </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Shop Homepage</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+  <link type="text/css" href="/css/home.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container px-4 px-lg-5">
+    <h1 class="navbar-brand">Hi-Tech</h1>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
+      </ul>
+      <form th:action="@{/search}" method="get" class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+      <a class="btn btn-outline-dark ms-2" href="/cart/view">
+        <i class="bi-cart-fill me-1"></i>
+        Cart
+      </a>
+    </div>
+  </div>
+</nav>
+
+<!-- Header-->
+<header class="bg-dark py-5">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Your Tech, Your Style</h1>
+    </div>
+  </div>
+</header>
+
+<!-- New Products Section-->
+<section class="py-5">
+  <div class="container px-4 px-lg-5 mt-5">
+    <h1 class="text-center mb-4">New Products</h1>
+    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+      <th:block th:each="product : ${newestProducts}">
+        <div class="col mb-5">
+          <div class="card h-100">
+            <div class="card-body p-4 text-center">
+              <img th:src="${product.imageURL}" class="card-img-top" width="200" height="200" alt="" />
+              <a th:href="@{/products/{id}(id=${product.id})}" class="card-title text-decoration-none" ><h5 th:text="${product.productName}"></h5></a>
+              <p class="card-text" th:text="${'Price: $' + product.price}"></p>
             </div>
-        </nav>
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Your Tech, Your Style</h1>
-                </div>
-            </div>
-        </header>
-        <!-- Section-->
-        <section class="py-5">
-          <h1 class="bsell">New Products</h1>
-          <div class="container px-4 px-lg-5 mt-5">
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-              <!-- Lặp qua 4 sản phẩm mới nhất -->
-              <th:block th:each="product : ${newestProducts}">
-                <div class="col mb-5">
-                  <div class="card h-100">
-                    <!-- Chi tiết sản phẩm -->
-                    <div class="card-body p-4">
-                      <div class="text-center">
-                        <img th:src="${product.imageURL}" width="200" height="200" alt="" />
-                        <a th:href="@{/product/{id}(id=${product.id})}" class="text-decoration-none">
-                          <a th:href="@{/products/{id}(id=${product.id})}" class="text-decoration-none"><h5 th:text="${product.productName}"></h5></a>
-                        </a>
-                        <p th:text="${'Price: $' + product.price}"></p>
-                      </div>
-                    </div>
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent"></div>
-                    <div class="text-center">
-                      <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${product.id})}">Add to cart</a>
-                    </div>
-                  </div>
-                </div>
-              </th:block>
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${product.id})}">Add to cart</a>
+              </div>
             </div>
           </div>
-        </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="../static/js/scripts.js"></script>
-    </body>
+        </div>
+      </th:block>
+    </div>
+  </div>
+</section>
+
+<!-- Favorite Products Section-->
+<section class="py-5">
+  <div class="container px-4 px-lg-5 mt-5">
+    <h1 class="text-center mb-4">Favorite Products</h1>
+    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+      <th:block th:each="product : ${favoriteProducts}">
+        <div class="col mb-5">
+          <div class="card h-100">
+            <div class="card-body p-4 text-center">
+              <img th:src="${product.imageURL}" class="card-img-top" width="200" height="200" alt="" />
+              <h5 class="card-title text-decoration-none" th:text="${product.productName}"></h5>
+              <p class="card-text" th:text="${'Price: $' + product.price}"></p>
+            </div>
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${product.id})}">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </th:block>
+    </div>
+  </div>
+</section>
+
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/static/js/scripts.js"></script>
+</body>
 </html>
