--- a/src/main/resources/templates/allProduct.html
+++ b/src/main/resources/templates/allProduct.html
@@ -5,15 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>All Product</title>
+  <title>All Products</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
   <link href="/css/home.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container px-4 px-lg-5">
-    <h1 class="navbar-brand" href="#!">Hi-Tech</h1>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <h1 class="navbar-brand">Hi-Tech</h1>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
@@ -21,67 +24,72 @@
         <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
       </ul>
-      
       <form th:action="@{/search}" method="get" class="d-flex">
-        <label>
-          <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
-        </label>
+        <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <form class="d-flex">
-        <a class="btn btn-outline-dark" type="submit" href="/cart/view">
-          <i class="bi-cart-fill me-1"></i>
-          Cart
-        </a>
-      </form>
+      <a class="btn btn-outline-dark ms-2" href="/cart/view">
+        <i class="bi-cart-fill me-1"></i>
+        Cart
+      </a>
     </div>
   </div>
 </nav>
-
+<div class="container mt-4">
+  <h3>Search By Price</h3>
+  <form action="/searchPrice" method="post" class="form-inline">
+    <div class="input-group mb-3">
+      <input name="Min" class="form-control" value="" placeholder="Min Price" aria-label="Min Price">
+      <input name="Max" class="form-control ms-2" value="" placeholder="Max Price" aria-label="Max Price">
+      <button class="btn btn-outline-primary ms-2" type="submit">Search</button>
+    </div>
+  </form>
+</div>
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
     <div class="row gx-4 gx-lg-5">
-      <th:block th:each="prod, iterStat : ${products}">
-        <th:block th:if="${iterStat.index >= currentPage * 12 and iterStat.index < (currentPage + 1) * 12}">
-          <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
-            <div class="card h-100">
-              <div class="card-body p-4">
-                <div class="text-center">
-                  <img th:src="${prod.imageURL}" width="200" height="200" alt="">
-                  <a th:href="@{/products/{id}(id=${prod.id})}" class="text-decoration-none">
-                    <h5 th:text="${prod.productName}"></h5>
-                  </a>
-                  <p th:text="${'Price: $' + prod.price}"></p>
-                </div>
+      <th:block th:each="prod : ${products}">
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
+          <div class="card h-100">
+            <div class="card-body p-4">
+              <div class="text-center">
+                <img th:src="${prod.imageURL}" width="200" height="200" alt="">
+                <a th:href="@{/products/{id}(id=${prod.id})}" class="text-decoration-none">
+                  <h5 th:text="${prod.productName}"></h5>
+                </a>
+                <p th:text="${'Price: $' + prod.price}"></p>
               </div>
-              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center">
-                  <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${prod.id})}">Add to cart</a>
-                </div>
+            </div>
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${prod.id})}">Add to cart</a>
               </div>
             </div>
           </div>
-        </th:block>
+        </div>
       </th:block>
     </div>
   </div>
 </section>
+
 <div th:if="${totalPages > 1}">
-  <ul>
-    <li th:if="${currentPage != 0}">
-      <a th:href="@{/products?page=${currentPage - 1}}">Previous</a>
+  <ul class="pagination justify-content-center">
+    <li class="page-item" th:if="${currentPage > 0}">
+      <a class="page-link" th:href="@{/products(page=${currentPage - 1})}">Previous</a>
     </li>
-    <li th:each="pageNo : ${#numbers.sequence(0, totalPages - 1)}">
-      <a th:href="@{/products?page=${pageNo}}" th:text="${pageNo + 1}">1</a>
+    <li class="page-item" th:each="pageNo : ${#numbers.sequence(0, totalPages - 1)}">
+      <a class="page-link" th:href="@{/products(page=${pageNo})}" th:text="${pageNo + 1}"></a>
     </li>
-    <li th:if="${currentPage != totalPages - 1}">
-      <a th:href="@{/products?page=${currentPage + 1}}">Next</a>
+    <li class="page-item" th:if="${currentPage < totalPages - 1}">
+      <a class="page-link" th:href="@{/products(page=${currentPage + 1})}">Next</a>
     </li>
   </ul>
 </div>
+
 <footer class="py-5 bg-dark">
   <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
