--- a/src/main/resources/templates/cartGuest.html
+++ b/src/main/resources/templates/cartGuest.html
@@ -14,6 +14,7 @@
 
 <div class="container">
   <h2>List Products</h2>
+  <a class="btn btn-primary btn-sm" href="/guest/products">Continue shopping</a>
   <div class="rows">
     <table class="table table-bordered">
       <thead>
