--- a/src/main/resources/templates/guestDetailProd.html
+++ b/src/main/resources/templates/guestDetailProd.html
@@ -7,31 +7,29 @@
   <meta name="author" content="">
   <title>Product Detail</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link type="text/css" href="/css/home.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link type = "text/css" href="/css/home.css" rel="stylesheet">
 </head>
 <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="/home">Hi-Tech</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <h1 class="navbar-brand" href="#!">Hi-Tech</h1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
-          <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
-          <li class="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="/guest">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/guest/products">All Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="/login">LOGIN</a></li>
         </ul>
         
-        <form th:action="@{/search}" method="get" class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+        <form th:action="@{/search-guest}" method="get" class="d-flex">
+          <label>
+            <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+          </label>
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
         <form class="d-flex">
-          <a class="btn btn-outline-dark" href="/cart/view">
+          <a class="btn btn-outline-dark" type="submit" href="/guest/view">
             <i class="bi-cart-fill me-1"></i>
             Cart
           </a>
@@ -47,7 +45,7 @@
       <aside class="col-lg-6">
         <div class="border rounded-4 mb-3 d-flex justify-content-center">
           <a class="rounded-4" target="_blank">
-            <img th:src="${prod.imageURL}" alt="Product Image" class="rounded-4" style="width: 100%; height: auto; max-width: 600px; object-fit: cover;">
+            <img th:src="${prod.imageURL}" alt="Product Image" class="rounded-4 fit" width="600px" height="600px" object-fit="cover">
           </a>
         </div>
       </aside>
@@ -55,18 +53,21 @@
         <div class="ps-lg-3">
           <h1 class="title text-dark" th:text="${prod.productName}"></h1>
           <div class="mb-3">
-            <h3 th:text="${'Price: $' + prod.price}" style="color: gold"></h3>
+            <h3 class="" th:text="${'Price: $' + prod.price}" style="color: gold"></h3>
           </div>
-          <p th:text="${prod.description}"></p>
+          
+          <td th:text="${prod.description}"></td>
           <hr />
-          <a th:href="@{/cart/add/{id}(id=${prod.id})}" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
+          <a th:href="@{/guest/add/{id}(id=${prod.id})}" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
+          <a  class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Favourite </a>
         </div>
       </main>
     </div>
   </div>
 </section>
+<!-- content -->
 
-<section class="bg-light border-top py-4">
+<section class="bg-light border-top py-4" >
   <div class="container">
     <div class="row gx-4">
       <div class="col-lg-8 mb-4">
@@ -74,7 +75,7 @@
           <!-- Pills navs -->
           <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
             <li class="nav-item d-flex" role="presentation">
-              <a class="nav-link d-flex align-items-center justify-content-center w-100 active" id="ex1-tab-1" data-bs-toggle="pill" href="#ex1-pills-1" role="tab" aria-controls="ex1-pills-1" aria-selected="true">Product Description</a>
+              <a class="nav-link d-flex align-items-center justify-content-center w-100 active" id="ex1-tab-1" data-mdb-toggle="pill" href="#ex1-pills-1" role="tab" aria-controls="ex1-pills-1" aria-selected="true">Product Description</a>
             </li>
           </ul>
           <div class="tab-content" id="ex1-content">
@@ -87,14 +88,8 @@
     </div>
   </div>
 </section>
-
 <footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
-  </div>
+  <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
-
-<!-- Bootstrap core JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
