--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,15 +1,15 @@
-<link href="//maxcdn.bootstrap.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
   <title>Login Page</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/login.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -19,21 +19,25 @@
         <h3>Sign In</h3>
       </div>
       <div class="card-body">
+        <!-- Thêm thông báo đăng ký thành công -->
+        <div th:if="${successMessage}" class="alert alert-success" role="alert">
+          <span th:text="${successMessage}"></span>
+        </div>
         <form action="/perform_login" method="post">
           <div class="input-group form-group">
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-user"></i></span>
             </div>
-              <input class="form-control" type="text" id="username" placeholder="Username" name="username" required>
+            <input class="form-control" type="text" id="username" placeholder="Username" name="username" required>
           </div>
           
           <div class="input-group form-group">
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-key"></i></span>
             </div>
-              <input type="password" class="form-control" placeholder="Password" name="password" required>
+            <input type="password" class="form-control" placeholder="Password" name="password" required>
           </div>
-
+          
           <div class="form-group">
             <input type="submit" value="Login" class="btn float-right login_btn">
           </div>
@@ -41,11 +45,21 @@
       </div>
       <div class="card-footer">
         <div class="d-flex justify-content-center links">
-          Don't have an account?<a href="http://localhost:8080/register">Sign Up</a>
+          Don't have an account? <a href="/register">Sign Up</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<script>
+  $(document).ready(function() {
+    const successMessage = /*[[${successMessage}]]*/ 'null';
+    if (successMessage !== 'null') {
+      $('.alert-success').show();
+    }
+  });
+</script>
+
 </body>
 </html>
