--- a/src/main/resources/templates/managementUser.html
+++ b/src/main/resources/templates/managementUser.html
@@ -4,33 +4,45 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manage Users</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/management.css" rel="stylesheet">
+  <script>
+    function confirmDelete(url) {
+      if (confirm('Are you sure you want to delete this user?')) {
+        window.location.href = url;
+      }
+    }
+  </script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="/ManagementUser">Admin</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/ManagementUser">Users</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/ManagementProd">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/ManagementOrder">Order</a>
-        </li>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/ManagementUser">Users</a></li>
+        <li class="nav-item"><a class="nav-link" href="/ManagementProd">Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="/ManagementOrder">Orders</a></li>
+        <li class="nav-item"><a class="nav-link btn btn-outline-light ms-3" href="/logout">LOGOUT</a></li>
       </ul>
     </div>
   </div>
 </nav>
-<div class="container">
-  <h1 class="text-center my-4">User Management</h1>
-  <table class="table" style="border: black">
-    <thead>
+<div class="container mt-4">
+  <h1 class="text-center mb-5">User Management</h1>
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h2 class="mb-0">User List</h2>
+    <form class="d-flex" th:action="@{/ManagementUser/search}" method="get">
+      <input style="width: 300px" class="form-control me-2" type="search" name="keyword" placeholder="Search by name, email..." aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+  <table class="table table-hover table-striped table-bordered">
+    <thead class="table-dark">
     <tr>
       <th>ID</th>
       <th>Full Name</th>
@@ -38,8 +50,6 @@
       <th>Address</th>
       <th>Phone Number</th>
       <th>Email</th>
-      <th>Username</th>
-      <th>Password</th>
       <th>Action</th>
     </tr>
     </thead>
@@ -51,17 +61,16 @@
       <td th:text="${user.address}"></td>
       <td th:text="${user.phoneNumber}"></td>
       <td th:text="${user.email}"></td>
-      <td th:text="${user.username}"></td>
-      <td th:text="${user.password}"></td>
       <td style="white-space: nowrap">
-        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementUser/edit/' + ${user.id}}">Edit</a>
-        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementUser/delete/' + ${user.id}}">Delete</a>
+        <div th:unless="${user.username == 'admin'}">
+          <a class="btn btn-primary btn-sm" th:href="@{'/ManagementUser/edit/' + ${user.id}}">Edit</a>
+          <a class="btn btn-danger btn-sm" href="#" th:onclick="'confirmDelete(\'/ManagementUser/delete/' + ${user.id} + '\')'">Delete</a>
       </td>
     </tr>
     </tbody>
   </table>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
