--- a/src/main/resources/templates/searchGuest.html
+++ b/src/main/resources/templates/searchGuest.html
@@ -8,28 +8,27 @@
   <title>Search Products</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
   <link href="/css/home.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container px-4 px-lg-5">
-    <a class="navbar-brand" href="/home">Hi-Tech</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <h1 class="navbar-brand" href="#!">Hi-Tech</h1>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/products">All Products</a></li>
-        <li class="nav-item"><a class="nav-link" href="/order">Order List</a></li>
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/guest">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/guest/products">All Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="/login">LOGIN</a></li>
       </ul>
       
-      <form th:action="@{/search}" method="get" class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+      <form th:action="@{/search-guest}" method="get" class="d-flex">
+        <label>
+          <input class="form-control me-2" type="search" placeholder="Search..." name="keyword" aria-label="Search">
+        </label>
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
       <form class="d-flex">
-        <a class="btn btn-outline-dark" href="/cart/view">
+        <a class="btn btn-outline-dark" type="submit" href="/guest/view">
           <i class="bi-cart-fill me-1"></i>
           Cart
         </a>
@@ -39,8 +38,8 @@
 </nav>
 <div class="container mt-4">
   <h5>Search By Price</h5>
-  <form action="/searchPrice" method="post" class="form-inline">
-    <div class="input-group mb-3">
+  <form action="/guest/searchPrice" method="post" class="form-inline">
+    <div class="input-group mb-3" style="width: 700px">
       <input name="Min" class="form-control" placeholder="Min Price" aria-label="Min Price" required>
       <input name="Max" class="form-control ms-2" placeholder="Max Price" aria-label="Max Price" required>
       <button class="btn btn-outline-primary ms-2" type="submit">Search</button>
@@ -56,45 +55,40 @@
             <div class="card-body p-4">
               <div class="text-center">
                 <img th:src="${prod.imageURL}" width="200" height="200" alt="">
-                <a th:href="@{/products/{id}(id=${prod.id})}" class="text-decoration-none">
-                  <h5 th:text="${prod.productName}"></h5>
-                </a>
+                <a th:href="@{/products/{id}(id=${prod.id})}" class="text-decoration-none"><h5 th:text="${prod.productName}"></h5></a>
                 <p th:text="${'Price: $' + prod.price}"></p>
               </div>
             </div>
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
               <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" th:href="@{/cart/add/{id}(id=${prod.id})}">Add to cart</a>
+                <a class="btn btn-outline-dark mt-auto" th:href="@{/guest/add/{id}(id=${prod.id})}">Add to cart</a>
               </div>
             </div>
           </div>
         </div>
-      </th:block>
-    </div>
+        <th:block th:if="${iterStat.index % 5 == 4}"></div></div></th:block>
+  </th:block>
+  </div>
   </div>
 </section>
 
 <div th:if="${totalPages > 1}">
-  <ul class="pagination justify-content-center">
-    <li class="page-item" th:if="${currentPage != 0}">
-      <a class="page-link" th:href="@{/products?page=${currentPage - 1}}">Previous</a>
+  <ul>
+    <li th:if="${currentPage != 0}">
+      <a th:href="@{/products?page=${currentPage - 1}}">Previous</a>
     </li>
-    <li class="page-item" th:each="pageNo : ${#numbers.sequence(0, totalPages - 1)}">
-      <a class="page-link" th:href="@{/products?page=${pageNo}}" th:text="${pageNo + 1}"></a>
+    <li th:each="pageNo : ${#numbers.sequence(0, totalPages - 1)}">
+      <a th:href="@{/products?page=${pageNo}}" th:text="${pageNo + 1}">1</a>
     </li>
-    <li class="page-item" th:if="${currentPage != totalPages - 1}">
-      <a class="page-link" th:href="@{/products?page=${currentPage + 1}}">Next</a>
+    <li th:if="${currentPage != totalPages - 1}">
+      <a th:href="@{/products?page=${currentPage + 1}}">Next</a>
     </li>
   </ul>
 </div>
-
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
-  </div>
+  <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
-
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
