--- a/src/main/resources/templates/viewOrder.html
+++ b/src/main/resources/templates/viewOrder.html
@@ -65,8 +65,7 @@
       <td th:text="${order.orderDate}"></td>
       <td th:text="${order.deliveryAddress}"></td>
       <td style="white-space: nowrap">
-<!--        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementOrder/edit/' + ${order.id}}">View Details</a>-->
-        <a class="btn btn-primary btn-sm" th:href="@{/order/delete/{id}(id=${order.id})}">Delete</a>
+        <a class="btn btn-primary btn-sm" th:href="@{/order/delete/{id}(id=${order.id})}" onclick="return confirm('Are you sure you want to cancel this order?')">Cancel</a>
       </td>
     </tr>
     </tbody>
