--- a/src/main/resources/templates/managementOrder.html
+++ b/src/main/resources/templates/managementOrder.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manage Orders</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script>
+    function confirmDelete(url) {
+      if (confirm('Are you sure you want to delete this order?')) {
+        window.location.href = url;
+      }
+    }
+  </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,6 +29,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/order">Order</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Home</a>
         </li>
       </ul>
     </div>
@@ -51,7 +61,7 @@
       <td th:text="${order.deliveryAddress}"></td>
       <td style="white-space: nowrap">
         <a class="btn btn-primary btn-sm" th:href="@{/ManagementOrder/edit/{id}(id=${order.id})}">Edit</a>
-        <a class="btn btn-danger btn-sm" th:href="@{/ManagementOrder/delete/{id}(id=${order.id})}">Delete</a>
+        <a class="btn btn-danger btn-sm" href="#" th:onclick="'confirmDelete(\'/ManagementOrder/delete/' + ${order.id} + '\')'">Delete</a>
       </td>
     </tr>
     </tbody>
