--- a/src/main/resources/templates/managementUser.html
+++ b/src/main/resources/templates/managementUser.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manage Users</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script>
+    function confirmDelete(url) {
+      if (confirm('Are you sure you want to delete this user?')) {
+        window.location.href = url;
+      }
+    }
+  </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -23,6 +30,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/ManagementOrder">Order</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Home</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -38,8 +48,6 @@
       <th>Address</th>
       <th>Phone Number</th>
       <th>Email</th>
-      <th>Username</th>
-      <th>Password</th>
       <th>Action</th>
     </tr>
     </thead>
@@ -51,11 +59,9 @@
       <td th:text="${user.address}"></td>
       <td th:text="${user.phoneNumber}"></td>
       <td th:text="${user.email}"></td>
-      <td th:text="${user.username}"></td>
-      <td th:text="${user.password}"></td>
       <td style="white-space: nowrap">
         <a class="btn btn-primary btn-sm" th:href="@{'/ManagementUser/edit/' + ${user.id}}">Edit</a>
-        <a class="btn btn-primary btn-sm" th:href="@{'/ManagementUser/delete/' + ${user.id}}">Delete</a>
+        <a class="btn btn-danger btn-sm" href="#" th:onclick="'confirmDelete(\'/ManagementUser/delete/' + ${user.id} + '\')'">Delete</a>
       </td>
     </tr>
     </tbody>
