--- a/src/main/resources/templates/allProduct.html
+++ b/src/main/resources/templates/allProduct.html
@@ -35,13 +35,22 @@
     </div>
   </div>
 </nav>
+<script>
+  function submitPriceFilterForm() {
+    document.getElementById('priceFilterForm').submit();
+  }
+</script>
+
 <div class="container mt-4">
-  <h3>Search By Price</h3>
-  <form action="/searchPrice" method="post" class="form-inline">
-    <div class="input-group mb-3">
-      <input name="Min" class="form-control" value="" placeholder="Min Price" aria-label="Min Price">
-      <input name="Max" class="form-control ms-2" value="" placeholder="Max Price" aria-label="Max Price">
-      <button class="btn btn-outline-primary ms-2" type="submit">Search</button>
+  <h5>Search By Price</h5>
+  <form action="/searchPrice" method="post" class="form-inline" id="priceFilterForm">
+    <div class="input-group mb-3" style="width: 200px">
+      <select name="priceRange" class="form-select" onchange="submitPriceFilterForm()">
+        <option value="0-20">0 to 20</option>
+        <option value="21-40">21 to 40</option>
+        <option value="41-60">41 to 60</option>
+        <option value="60+">60 and above</option>
+      </select>
     </div>
   </form>
 </div>
