--- a/src/main/resources/templates/createProduct.html
+++ b/src/main/resources/templates/createProduct.html
@@ -61,7 +61,7 @@
           <input type="file" class="form-control" id="imageURL" name="imageURL" required>
         </div>
         <div class="mb-3">
-          <label for="price" class="form-label">Price ($)</label>
+          <label for="price" class="form-label">Price (VND)</label>
           <input type="number" class="form-control" id="price" th:field="*{price}" required>
         </div>
         <div class="mb-3">
