--- a/src/main/resources/templates/editProd.html
+++ b/src/main/resources/templates/editProd.html
@@ -75,7 +75,7 @@
         </div>
         
         <div class="mb-3">
-          <label class="form-label">Price ($)</label>
+          <label class="form-label">Price (VND)</label>
           <input class="form-control" type="number" th:field="${product.price}" required>
         </div>
         
