--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -49,10 +49,10 @@
   <form action="/searchPrice" method="post" class="form-inline" id="priceFilterForm">
     <div class="input-group mb-3" style="width: 200px">
       <select name="priceRange" class="form-select" onchange="submitPriceFilterForm()">
-        <option value="0-20">0 to 20</option>
-        <option value="21-40">21 to 40</option>
-        <option value="41-60">41 to 60</option>
-        <option value="60+">60 and above</option>
+        <option value="" disabled selected>Select Price</option>
+        <option value="0-10999999">0 to 10.000.000</option>
+        <option value="11000000-20999999">11.000.000 to 20.000.000</option>
+        <option value="30000000+">30.000.000 and above</option>
       </select>
     </div>
   </form>
@@ -71,7 +71,7 @@
                 <a th:href="@{/products/{id}(id=${prod.id})}" class="text-decoration-none">
                   <h5 th:text="${prod.productName}"></h5>
                 </a>
-                <p th:text="${'Price: $' + prod.price}"></p>
+                <p th:text="${'Price: ' + prod.price + 'VND'}"></p>
               </div>
             </div>
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
