--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,7 +56,7 @@
             <div class="card-body p-4 text-center">
               <img th:src="${product.imageURL}" class="card-img-top" width="200" height="200" alt="" />
               <a th:href="@{/products/{id}(id=${product.id})}" class="card-title text-decoration-none" ><h5 th:text="${product.productName}"></h5></a>
-              <p class="card-text" th:text="${'Price: $' + product.price}"></p>
+              <p class="card-text" th:text="${'Price: ' + product.price + 'VND'}"></p>
             </div>
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
               <div class="text-center">
@@ -81,7 +81,7 @@
             <div class="card-body p-4 text-center">
               <img th:src="${product.imageURL}" class="card-img-top" width="200" height="200" alt="" />
               <h5 class="card-title text-decoration-none" th:text="${product.productName}"></h5>
-              <p class="card-text" th:text="${'Price: $' + product.price}"></p>
+              <p class="card-text" th:text="${'Price: ' + product.price + 'VND'}"></p>
             </div>
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
               <div class="text-center">
