--- a/src/main/resources/templates/productDetail.html
+++ b/src/main/resources/templates/productDetail.html
@@ -55,7 +55,7 @@
         <div class="ps-lg-3">
           <h1 class="title text-dark" th:text="${prod.productName}"></h1>
           <div class="mb-3">
-            <h3 th:text="${'Price: $' + prod.price}" style="color: gold"></h3>
+            <h3 th:text="${'Price:' + prod.price + 'VND'}" style="color: gold"></h3>
           </div>
           <p th:text="${prod.description}"></p>
           <hr />
